--- a/css/pages/coming-soon.css
+++ b/css/pages/coming-soon.css
@@ -1,8 +1,8 @@
 body,
 body * {
-    box-sizing: border-box;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -14,17 +14,96 @@ body {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    padding-left: 60px;
-    padding-left: 60px;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 .row {
-    width: 800px;
+    display: flex;
+    justify-content: space-between;
+    width: 1000px;
 }
 
 .row-short {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
     width: 600px;
 }
+header > .row-short {
+    gap: 20px;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 50%;
+}
+.column + .column {
+    width: 40%;
+}
+
 .bg-blue {
-    background-color: blue;
+    background-color: #03a9f5;
+}
+
+.logo {
+    height: 40px;
+}
+
+.logo-white {
+    height: 60px;
+    margin-bottom: 30px;
+}
+
+.footer {
+    color: #ffffffcd;
+}
+
+.footer a {
+    color: #fff;
+}
+
+.text-trio {
+    display: flex;
+    gap: 30px
+}
+
+@media (max-width: 1100px) {
+    .row {
+        width: 800px;
+    }
+}
+
+@media (max-width: 900px) {
+    .row {
+        width: 600px;
+    }
+}
+
+@media (max-width: 700px) {
+    .row {
+        width: 400px;
+    }
+
+    .row-short {
+        width: 400px;
+    }
+}
+
+@media (max-width: 500px) {
+    .container {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .row {
+        width: 100%;
+    }
+
+    .row-short {
+        width: 100%;
+    }
 }
