--- a/css/pages/coming-soon.css
+++ b/css/pages/coming-soon.css
@@ -6,43 +6,7 @@ body * {
 }
 
 body {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif 'Seravek', 'Trebuchet MS', sans-serif;
-}
-
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    padding-top: 60px;
-    padding-bottom: 60px;
-}
-
-.row {
-    display: flex;
-    justify-content: space-between;
-    width: 1000px;
-}
-
-.row-short {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    width: 600px;
-}
-header > .row-short {
-    gap: 20px;
-}
-
-.column {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    width: 50%;
-}
-.column + .column {
-    width: 40%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', 'Trebuchet MS', sans-serif;
 }
 
 .bg-blue {
@@ -53,57 +17,50 @@ header > .row-short {
     height: 40px;
 }
 
-.logo-white {
-    height: 60px;
-    margin-bottom: 30px;
+.main-title {
+    font-size: 50px;
+    text-transform: uppercase;
+    color: #000;
+}
+
+.main-description {
+    font-size: 22px;
+    color: #ccc;
+}
+
+.section-title {
+    font-size: 25px;
+    text-transform: uppercase;
+    color: #000;
+}
+
+.section-description {
+    font-size: 17px;
+    line-height: 25px;
+    color: #555;
 }
 
 .footer {
     color: #ffffffcd;
 }
 
+.logo-white {
+    height: 60px;
+    margin-bottom: 30px;
+  }
+  
 .footer a {
     color: #fff;
 }
 
 .text-trio {
     display: flex;
-    gap: 30px;
-}
-
-@media (max-width: 1100px) {
-    .row {
-        width: 800px;
-    }
-}
-
-@media (max-width: 900px) {
-    .row {
-        width: 600px;
-    }
+    gap: 0 30px;
 }
 
 @media (max-width: 700px) {
-    .row {
-        width: 400px;
-    }
-
-    .row-short {
-        width: 400px;
+    .text-trio {
+        flex-direction: column;
     }
 }
 
-@media (max-width: 500px) {
-    .container {
-        padding-left: 20px;
-        padding-right: 20px;
-    }
-
-    .row {
-        width: 100%;
-    }
-
-    .row-short {
-        width: 100%;
-    }
-}
