--- a/css/pages/coming-soon.css
+++ b/css/pages/coming-soon.css
@@ -30,7 +30,6 @@ body {
 
 .section-title {
     font-size: 25px;
-    text-transform: uppercase;
     color: #000;
 }
 
@@ -39,8 +38,14 @@ body {
     line-height: 25px;
     color: #555;
 }
+.section-description > a {
+    color: #eb1e61;
+    text-decoration: none;
+  }
+  
 
 .footer {
+    /* color: rgba(255, 255, 255, 0.8); */
     color: #ffffffcd;
 }
 
