--- a/css/pages/coming-soon.css
+++ b/css/pages/coming-soon.css
@@ -13,6 +13,13 @@ body {
     background-color: #03a9f5;
 }
 
+.hero {
+    background-image: url(../../img/);
+    background-position: center;
+    min-height: 100vh;
+    
+}
+
 .logo {
     height: 40px;
 }
@@ -56,6 +63,38 @@ body {
   
 .footer a {
     color: #fff;
+}
+
+.socials {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    width: 100%;
+    margin-bottom: 30px;
+    padding: 1rem;
+    border-bottom: 0.1rem solid #fff;
+}
+
+.socials  a {
+    display: inline-block;
+    width: 2.6rem; 
+    /* 1rem = 16px */
+    /* 1rem !== 1em */
+    /* 1em = 100px */           
+    height: 2.6rem;
+    line-height: 2.6rem;
+    text-decoration: none;
+    border-radius: 50%;
+    background-color: #fff0;
+    color: #fff;
+    text-align: center;
+    transition:  all 0.3s;
+}
+
+.socials a:hover {
+    background-color: #fff;
+    color: #03a9f5;
 }
 
 .text-trio {
