--- a/css/pages/coming-soon.css
+++ b/css/pages/coming-soon.css
@@ -3,9 +3,13 @@
 }
 
 .hero {
-    background-image: url(../../img/);
+    background-image: url(../../img/hero-small.png);
     background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
     min-height: 100vh;
+    justify-content: center;
     
 }
 
