--- a/css/components/mouse.css
+++ b/css/components/mouse.css
@@ -1,5 +1,5 @@
 .mouse { /* 100px = 1em */
-    font-size: 15px;
+    font-size: 0.9rem;
     width:  2em;
     height: 3em;
     border: 0.3em solid #fff;
@@ -14,4 +14,33 @@
     margin-top: 0.5em;
     background-color: #fff;
     border-radius: 0.15em;
+
+    animation-name: movement;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: normal;
+    animation-play-state: running;
+}
+.mouse:hover::after{
+    animation-play-state: paused;
+}
+
+/* vieta */
+/* aktorius */ 
+/* scenarijus */
+/* tempas */
+
+@keyframes movement {
+    0% {
+        margin-top: 0.5em;
+        opacity: 1;
+        background-color: #eb1e61;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        margin-top: 1.5em;
+        opacity: 0;
+    }
 }
