--- a/css/pages/coming-soon.css
+++ b/css/pages/coming-soon.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 .bg-blue {
     background-color: #03a9f5;
 }
@@ -69,7 +73,7 @@
     margin-bottom: 30px;
   }
   
-.footer a {
+footer a {
     color: #fff;
 }
 
@@ -116,3 +120,20 @@
     }
 }
 
+footer .row {
+    position: relative;
+}
+.back-to-top {
+    font-size: 1.8rem;
+    line-height: 1.8em;
+    width: 2em;
+    height: 2em;
+    border-radius: 50%;
+    text-decoration: none;
+    position: absolute;
+    top: -3em;
+    right: -0.7em;
+    background-color: #eb1e61;
+    text-align: center;
+    box-shadow: 0 0.2em 0.4em #0006;
+}
