--- a/css/base/bace.css
+++ b/css/base/bace.css
@@ -1,3 +1,9 @@
+:root {
+    --color-primary: #03a9f4;
+    --color-secondary: #eb1e61;
+    --shadow: 0 0.2rem 0.4rem #0006;
+}
+
 body,
 body * {
     margin: 0;
