--- a/css/components/forms.css
+++ b/css/components/forms.css
@@ -44,7 +44,7 @@
 }
 .form input:focus,
 .form textarea:focus {
-  outline: 1px solid red;
+  outline: 1px solid var(--color-secondary);
 }
 .form ::placeholder {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -53,8 +53,8 @@
   font-size: 1rem;
   line-height: 1em;
   padding: 1em;
-  background-color: #eb1e61;
+  background-color: var(--color-secondary);
   color: #fff;
   border: none;
-  box-shadow: 0 0.2em 0.4em #0006;
+  box-shadow: var(--shadow);
 }
