--- a/css/components/mouse.css
+++ b/css/components/mouse.css
@@ -36,7 +36,7 @@
     0% {
         margin-top: 0.5em;
         opacity: 1;
-        background-color: #eb1e61;
+        background-color: var(--color-secondary);
     }
     50% {
         opacity: 1;
