--- a/css/components/progress-bar.css
+++ b/css/components/progress-bar.css
@@ -19,7 +19,7 @@
     width: 90%;
 }
 .progress-bar .value {
- background-color: #03a9f5;
+ background-color: var(--color-primary);
  height: 100%;
  width: 100%;
  animation-name: loading;
